--- a/Views/Inquilino/Editar.cshtml
+++ b/Views/Inquilino/Editar.cshtml
@@ -9,9 +9,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Editar">
+        <form asp-action="Guardar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-         <--modificar--> <input type="hidden" name="IdInquilino" value="@Model.IdInquilino" />
+            <input type="hidden" name="IdInquilino" value="@Model.IdInquilino" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
