--- a/Views/Inmueble/Crear.cshtml
+++ b/Views/Inmueble/Crear.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Guardar";
+    var listaPropietarios = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Propietario>)ViewBag.Propietarios;
 }
 
 <h1>Crear</h1>
@@ -43,10 +44,16 @@
                 <span asp-validation-for="Uso" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PropietarioId" class="control-label"></label>
-                <input asp-for="PropietarioId" class="form-control" />
-                <span asp-validation-for="PropietarioId" class="text-danger"></span>
-            </div>
+				<label class="control-label">Propietario</label>
+				<select class="form-control" name="PropietarioId">
+					@foreach (var item in listaPropietarios)
+					{
+						<option value="@item.IdPropietario">@(item.ToString())</option>
+					}
+				</select>
+				<span asp-validation-for="PropietarioId" class="text-danger"></span>
+			</div>
+            <br>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
