--- a/Views/Inmueble/Listado.cshtml
+++ b/Views/Inmueble/Listado.cshtml
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.Uso)
             </td>
             <td>
-               @Html.DisplayFor(modelItem => item.PropietarioId)
+               @(item.Duenio.Nombre + " " + item.Duenio.Apellido)
             </td>
 			<td>
 				<a asp-action="Editar" asp-route-id="@item.IdInmueble" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
