Contrato con vistas completas
No funciona la carga de fechas de inicio y fin. problema de sintaxis sql al parecer.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inmueble" asp-action="Listado">Inmuebles</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contrato" asp-action="Listado">Contratos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
