--- a/Views/Contrato/Editar.cshtml
+++ b/Views/Contrato/Editar.cshtml
@@ -1,6 +1,8 @@
 @model Tp_Inmobiliaria_Ledesma_Lillo.Models.Contrato;
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Contrato";
+    var listaInmuebles = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Inmueble>)ViewBag.Inmuebles;
+    var listaInquilinos = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Inquilino>)ViewBag.Inquilinos;
 }
 
 <h1>Editar</h1>
@@ -13,19 +15,29 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdContrato" class="control-label"></label>
-                <input asp-for="IdContrato" value="@Model.IdContrato" class="form-control" />
+                <input type="hidden" asp-for="IdContrato" value="@Model.IdContrato" class="form-control" />
                 <span asp-validation-for="IdContrato" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InmuebleId" class="control-label"></label>
-                <input asp-for="InmuebleId" class="form-control" />
-                <span asp-validation-for="InmuebleId" class="text-danger"></span>
-            </div>
+				<label class="control-label">Inmueble</label>
+				<select class="form-control" name="InmuebleId">
+					@foreach (var item in listaInmuebles)
+					{
+						<option value="@item.IdInmueble">@(item.Direccion)</option>
+					}
+				</select>
+				<span asp-validation-for="InmuebleId" class="text-danger"></span>
+			</div>
             <div class="form-group">
-                <label asp-for="InquilinoId" class="control-label"></label>
-                <input asp-for="InquilinoId" class="form-control" />
-                <span asp-validation-for="InquilinoId" class="text-danger"></span>
-            </div>
+				<label class="control-label">Inquilino</label>
+				<select class="form-control" name="InquilinoId">
+					@foreach (var item in listaInquilinos)
+					{
+						<option value="@item.IdInquilino">@(item.ToString())</option>
+					}
+				</select>
+				<span asp-validation-for="InquilinoId" class="text-danger"></span>
+			</div>
             <div class="form-group">
                 <label asp-for="FecInicio" class="control-label"></label>
                 <input asp-for="FecInicio" class="form-control" />
