--- a/Views/Contrato/Crear.cshtml
+++ b/Views/Contrato/Crear.cshtml
@@ -1,5 +1,9 @@
 @model Tp_Inmobiliaria_Ledesma_Lillo.Models.Contrato;
-
+@{
+    ViewData["Title"] = "Guardar";
+    var listaInmuebles = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Inmueble>)ViewBag.Inmuebles;
+    var listaInquilinos = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Inquilino>)ViewBag.Inquilinos;
+}
 <h1>Nuevo Contrato</h1>
 
 <h4>Contrato</h4>
@@ -9,15 +13,25 @@
         <form asp-action="Guardar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="InmuebleId" class="control-label"></label>
-                <input asp-for="InmuebleId" class="form-control" />
-                <span asp-validation-for="InmuebleId" class="text-danger"></span>
-            </div>
+				<label class="control-label">Inquilino</label>
+				<select class="form-control" name="InquilinoId">
+					@foreach (var item in listaInquilinos)
+					{
+						<option value="@item.IdInquilino">@(item.ToString())</option>
+					}
+				</select>
+				<span asp-validation-for="InquilinoId" class="text-danger"></span>
+			</div>
             <div class="form-group">
-                <label asp-for="InquilinoId" class="control-label"></label>
-                <input asp-for="InquilinoId" class="form-control" />
-                <span asp-validation-for="InquilinoId" class="text-danger"></span>
-            </div>
+				<label class="control-label">Inmueble</label>
+				<select class="form-control" name="InmuebleId">
+					@foreach (var item in listaInmuebles)
+					{
+						<option value="@item.IdInmueble">@(item.Direccion)</option>
+					}
+				</select>
+				<span asp-validation-for="InmuebleId" class="text-danger"></span>
+			</div>
             <div class="form-group">
                 <label asp-for="FecInicio" class="control-label"></label>
                 <input asp-for="FecInicio" class="form-control" />
