--- a/Views/Inmueble/Crear.cshtml
+++ b/Views/Inmueble/Crear.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Guardar";
     var listaPropietarios = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Propietario>)ViewBag.Propietarios;
+    var listaTipos = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Tipo>)ViewBag.Tipos;
 }
 
 <h1>Crear</h1>
@@ -43,6 +44,16 @@
                 <input asp-for="Uso" class="form-control" />
                 <span asp-validation-for="Uso" class="text-danger"></span>
             </div>
+            <div class="form-group">
+				<label class="control-label">Tipo Inmueble</label>
+				<select class="form-control" name="TipoId">
+					@foreach (var item in listaTipos)
+					{
+						<option value="@item.IdTipo">@(item.ToString())</option>
+					}
+				</select>
+				<span asp-validation-for="TipoId" class="text-danger"></span>
+			</div>
             <div class="form-group">
 				<label class="control-label">Propietario</label>
 				<select class="form-control" name="PropietarioId">
