--- a/Views/Inmueble/Guardar.cshtml
+++ b/Views/Inmueble/Guardar.cshtml
@@ -48,6 +48,11 @@
                 <span asp-validation-for="PropietarioId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="TipoId" class="control-label"></label>
+                <input asp-for="TipoId" class="form-control" />
+                <span asp-validation-for="TipoId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
