--- a/Views/Inmueble/Listado.cshtml
+++ b/Views/Inmueble/Listado.cshtml
@@ -31,6 +31,9 @@
                 @Html.DisplayNameFor(model => model.Uso)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.TipoId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.PropietarioId)
             </th>
             <th></th>
@@ -56,6 +59,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Uso)
+            </td>
+            <td>
+               @(item.TipoInmueble.Descripcion)
             </td>
             <td>
                @(item.Duenio.Nombre + " " + item.Duenio.Apellido)
