--- a/Views/Propietario/Editar.cshtml
+++ b/Views/Propietario/Editar.cshtml
@@ -37,6 +37,11 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Clave" class="control-label"></label>
+                <input asp-for="Clave" class="form-control" />
+                <span asp-validation-for="Clave" class="text-danger"></span>
+            </div>
             <br>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
