pagos anda listado, eliminar, falta arreglar el editar

--- a/Views/Pago/Editar.cshtml
+++ b/Views/Pago/Editar.cshtml
@@ -1,11 +1,8 @@
 @model Tp_Inmobiliaria_Ledesma_Lillo.Models.Pago;
-
 @{
-    ViewData["Title"] = "Guardar";
+    ViewData["Title"] = "Editar Pago";
 }
-
-<h1>Guardar</h1>
-
+<h1>Editar</h1>
 <h4>Pago</h4>
 <hr />
 <div class="row">
