--- a/Views/Contrato/Listado.cshtml
+++ b/Views/Contrato/Listado.cshtml
@@ -60,6 +60,9 @@
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdContrato" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
             </td>
+            <td>
+                <a asp-controller="Pago" asp-action="Crear" asp-route-id="@item.IdContrato">Nuevo Pago</a>
+            </td>
         </tr>
 }
     </tbody>
