--- a/Views/Pago/Listado.cshtml
+++ b/Views/Pago/Listado.cshtml
@@ -24,9 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ContratoId)
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.contrato.Inquilino.Apellido)
-            </th>*@
+            <th>
+                @Html.DisplayNameFor(model => model.contrato.Inquilino)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -45,9 +45,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ContratoId)
             </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.contrato.Inquilino.Apellido)
-            </td>*@
+            <td>
+                 @(item.contrato.Inquilino.Apellido)
+            </td>
 			<td>
 				<a asp-action="Editar" asp-route-id="@item.IdPago" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
 				
