--- a/Views/Pago/Guardar.cshtml
+++ b/Views/Pago/Guardar.cshtml
@@ -1,9 +1,7 @@
 @model Tp_Inmobiliaria_Ledesma_Lillo.Models.Pago;
-
 @{
     ViewData["Title"] = "Guardar";
 }
-
 <h1>Guardar</h1>
 
 <h4>Pago</h4>
@@ -14,12 +12,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NumPago" class="control-label"></label>
-                <input asp-for="NumPago" class="form-control" />
+                <input asp-for="NumPago" class="form-control" value="@ViewBag.tamanio"/>
                 <span asp-validation-for="NumPago" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Importe" class="control-label"></label>
-                <input asp-for="Importe" class="form-control" />
+                <input asp-for="Importe" class="form-control" value="@ViewBag.monto"/>
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,8 +26,13 @@
                 <span asp-validation-for="FechaPago" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Detalle" class="control-label"></label>
+                <input asp-for="Detalle" class="form-control"/>
+                <span asp-validation-for="Importe" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ContratoId" class="control-label"></label>
-                <input asp-for="ContratoId" class="form-control" />
+                <input asp-for="ContratoId" class="form-control" value="@ViewBag.idContrato"/>
                 <span asp-validation-for="ContratoId" class="text-danger"></span>
             </div>
             <br>
