--- a/Views/Pago/Eliminar.cshtml
+++ b/Views/Pago/Eliminar.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.Importe)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Detalle)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Detalle)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ContratoId)
         </dt>
         <dd class="col-sm-10">
