--- a/Views/Pago/Listado.cshtml
+++ b/Views/Pago/Listado.cshtml
@@ -5,10 +5,6 @@
 
 <div>
 <h1>Listado de Pagos</h1>
-
-<p>
-    <a asp-action="Crear" title="Agregar Nuevo"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -20,6 +16,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FechaPago)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Detalle)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ContratoId)
@@ -41,6 +40,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaPago)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Detalle)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ContratoId)
