--- a/Views/Inmueble/Listado.cshtml
+++ b/Views/Inmueble/Listado.cshtml
@@ -9,7 +9,7 @@
 <p>
      <a asp-action="Crear" title="Agregar Nuevo"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -17,15 +17,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Ambientes)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Superficie)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Latitud)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Longitud)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Uso)
@@ -49,15 +40,6 @@
                 @Html.DisplayFor(modelItem => item.Ambientes)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Superficie)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Latitud)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Longitud)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Uso)
             </td>
             <td>
@@ -69,6 +51,9 @@
 			<td>
 				<a asp-action="Editar" asp-route-id="@item.IdInmueble" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
 				
+			</td>
+            <td>
+				<a asp-action="Detalle" asp-route-id="@item.IdInmueble" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdInmueble" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
