--- a/Views/Inquilino/Listado.cshtml
+++ b/Views/Inquilino/Listado.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Crear" title="Agregar Nuevo"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -52,6 +52,9 @@
 			<td>
 				<a asp-action="Editar" asp-route-id="@item.IdInquilino" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
 				
+			</td>
+            <td>
+				<a asp-action="Detalle" asp-route-id="@item.IdInquilino" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdInquilino" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
