--- a/Views/Propietario/Listado.cshtml
+++ b/Views/Propietario/Listado.cshtml
@@ -2,14 +2,12 @@
 @{
     ViewData["Title"] = "Propietario";
 }
-
 <div>
 	<h1>Propietarios</h1>
-
 <p>
     <a asp-action="Crear" title="Agregar Nuevo"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -50,7 +48,9 @@
             </td>
 			<td>
 				<a asp-action="Editar" asp-route-id="@item.IdPropietario" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-				
+			</td>
+            <td>
+				<a asp-action="Detalle" asp-route-id="@item.IdPropietario" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdPropietario" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
