--- a/Views/Contrato/Listado.cshtml
+++ b/Views/Contrato/Listado.cshtml
@@ -8,7 +8,7 @@
 <p>
     <a asp-action="Crear" title="Nuevo Contrato"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -55,7 +55,9 @@
             </td>
             <td>
 				<a asp-action="Editar" asp-route-id="@item.IdContrato" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-				
+			</td>
+            <td>
+				<a asp-action="Detalle" asp-route-id="@item.IdContrato" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdContrato" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
