--- a/Views/Pago/Listado.cshtml
+++ b/Views/Pago/Listado.cshtml
@@ -5,7 +5,7 @@
 
 <div>
 <h1>Listado de Pagos</h1>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -52,7 +52,9 @@
             </td>
 			<td>
 				<a asp-action="Editar" asp-route-id="@item.IdPago" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-				
+			</td>
+            <td>
+				<a asp-action="Detalle" asp-route-id="@item.IdPago" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdPago" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
