--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
 				<div class="alert alert-success alert-dismissible fade show" role="alert">
 					<strong>¡Éxito!</strong> La entidad fue dada de alta con id: @ViewBag.Id
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true"><span class="lnr lnr-cross-circle"></span></span>
+						<span aria-hidden="true"><i class="fa fa-check" aria-hidden="true"></i></span>
 					</button>
 				</div>
 			}
@@ -62,7 +62,7 @@
 				<div class="alert alert-info alert-dismissible fade show" role="alert">
 					<strong>Información:</strong> @ViewBag.Mensaje
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true"><span class="lnr lnr-cross-circle"></span></span>
+						<span aria-hidden="true"><i class="fa fa-window-close" aria-hidden="true"></i></span>
 					</button>
 				</div>
 			}
