--- a/Views/Tipo/Listado.cshtml
+++ b/Views/Tipo/Listado.cshtml
@@ -6,11 +6,10 @@
 
 <div>
 	<h1>Tipos de Inmueble</h1>
-
 <p>
     <a asp-action="Crear" title="Agregar Nuevo"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -25,6 +24,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Descripcion)
             </td>
+            <td>
+				<a asp-action="Detalle" asp-route-id="@item.IdTipo" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
+			</td>
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdTipo" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
             </td>
