Detalle Contrato, TipoInmueble y Pagos

--- a/Views/Contrato/Detalle.cshtml
+++ b/Views/Contrato/Detalle.cshtml
@@ -17,7 +17,7 @@
             @Html.DisplayNameFor(model => model.InmuebleId)
         </dt>
         <dd class="col-sm-10">
-            @ViewBag.Propietario
+            @ViewBag.Inmueble
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Inquilino)
