--- a/Views/Usuario/Listado.cshtml
+++ b/Views/Usuario/Listado.cshtml
@@ -2,10 +2,10 @@
 
  
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Listado";
 }
 
-<h1>Index</h1>
+<h1>Lista de Usuarios</h1>
 
 <p>
     <a asp-action="Crear">Create New</a>
@@ -55,10 +55,12 @@
 			<td>
 				@Html.DisplayFor(modelItem => item.RolNombre)
 			</td>
-			<td>
-				<a asp-action="Editar" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa-solid fa-square-pen"></i></a>&nbsp;
-				<a asp-action="Eliminar" asp-route-id="@item.IdUsuario" title="Eliminar"><i class="fa-solid fa-trash-can"></i></a>
-			</td>
+            @if(User.IsInRole("Administrador")){
+                <td>
+                    <a asp-action="Editar" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa-solid fa-square-pen"></i></a>&nbsp;
+                    <a asp-action="Eliminar" asp-route-id="@item.IdUsuario" title="Eliminar"><i class="fa-solid fa-trash-can"></i></a>
+                </td>
+                }
 		</tr>
 }
     </tbody>
