--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -37,7 +37,31 @@
                 <input type="file" asp-for="AvatarFile" class="form-control" />
                 <span asp-validation-for="AvatarFile" class="text-danger"></span>
             </div>
-          
+             @if(User.IsInRole("Administrador"))
+			{
+				 <div class="form-group">
+				<label class="control-label">Rol</label>
+				<select class="form-control"  name="Rol">
+					
+					
+						<option asp-for="Rol" value="1">Administrador</option>
+                        <option asp-for="Rol" value="2">Empleado</option>
+					
+				</select>
+				<span asp-validation-for="Rol" class="text-danger"></span>
+			</div>
+			}
+			<div class="form-group">
+				<label asp-for="Avatar" class="control-label"></label><br />
+				@if (Model.Avatar != "")
+				{
+					<img src="@Model.Avatar" />
+				}
+				else
+				{
+					<p>Sin avatar</p>
+				}
+			</div>
             <br>
             <div class="form-group">
                 <input type="submit" value="Editar" class="btn btn-primary" />
