--- a/Views/Usuario/Guardar.cshtml
+++ b/Views/Usuario/Guardar.cshtml
@@ -33,9 +33,9 @@
                 <span asp-validation-for="Clave" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Avatar" class="control-label"></label>
-                <input type="file" asp-for="Avatar" class="form-control" />
-                <span asp-validation-for="Avatar" class="text-danger"></span>
+                <label asp-for="AvatarFile" class="control-label"></label>
+                <input type="file" asp-for="AvatarFile" class="form-control" />
+                <span asp-validation-for="AvatarFile" class="text-danger"></span>
             </div>
             @if (User.IsInRole("Administrador"))
 			{
