--- a/Views/Contrato/Listado.cshtml
+++ b/Views/Contrato/Listado.cshtml
@@ -32,7 +32,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
 @foreach (var item in Model) {
         <tr>
             <td>
