--- a/Views/Inquilino/Listado.cshtml
+++ b/Views/Inquilino/Listado.cshtml
@@ -30,7 +30,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
 @foreach (var item in Model) {
         <tr>
             <td>
