--- a/Views/Tipo/Listado.cshtml
+++ b/Views/Tipo/Listado.cshtml
@@ -18,7 +18,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
 @foreach (var item in Model) {
         <tr>
             <td>
