--- a/Views/Usuario/Listado.cshtml
+++ b/Views/Usuario/Listado.cshtml
@@ -4,13 +4,11 @@
 @{
     ViewData["Title"] = "Listado";
 }
-
 <h1>Lista de Usuarios</h1>
-
 <p>
-    <a asp-action="Crear">Create New</a>
+    <a asp-action="Crear">Nuevo Usuario</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -34,7 +32,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
 @foreach (var item in Model) {
 		<tr>
 			<td>
