--- a/Views/Pago/Listado.cshtml
+++ b/Views/Pago/Listado.cshtml
@@ -5,7 +5,7 @@
 <div class="col-md-4">
         <form asp-action="PagosEliminados">
             <div class="form-group">
-                <input type="submit" value="Pagos Eliminados" class="btn btn-primary" />
+                <input type="submit" value="Pagos Anulados" class="btn btn-primary" />
             </div>
         </form> 
 </div> 
