--- a/Views/Pago/PagosEliminados.cshtml
+++ b/Views/Pago/PagosEliminados.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Pagos Eliminados";
 }
 <div>
-<h1>Listado de Pagos Eliminados</h1>
+<h1>Listado de Pagos Anulados</h1>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
