--- a/Views/Usuario/Perfil.cshtml
+++ b/Views/Usuario/Perfil.cshtml
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="col-md-2">
-            @Html.ActionLink("Editar", "Editar", new { id = Model.IdUsuario }, new { @class = "button btn" })
+            @Html.ActionLink("Editar", "EditarPerfil", new { id = Model.IdUsuario }, new { @class = "button btn" })
         </div>
     </div>
 </div>
