--- a/Views/Contrato/Listado.cshtml
+++ b/Views/Contrato/Listado.cshtml
@@ -53,15 +53,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Estado)
             </td>
-            <td>
-				<a asp-action="Editar" asp-route-id="@item.IdContrato" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-			</td>
+            @if(User.IsInRole("Administrador")){
+                <td>
+                    <a asp-action="Editar" asp-route-id="@item.IdContrato" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
+                </td>
+                }
             <td>
 				<a asp-action="Detalle" asp-route-id="@item.IdContrato" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
+            @if(User.IsInRole("Administrador")){
             <td>
                 <a asp-action="Eliminar" asp-route-id="@item.IdContrato" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
             </td>
+            }
             <td>
                 <a asp-controller="Pago" asp-action="Crear" asp-route-id="@item.IdContrato">Nuevo Pago</a>
             </td>
