--- a/Views/Inmueble/Listado.cshtml
+++ b/Views/Inmueble/Listado.cshtml
@@ -46,15 +46,19 @@
             <td>
                @(item.Duenio.Nombre + " " + item.Duenio.Apellido)
             </td>
-			<td>
-				<a asp-action="Editar" asp-route-id="@item.IdInmueble" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-			</td>
+            @if(User.IsInRole("Administrador")){
+                <td>
+                    <a asp-action="Editar" asp-route-id="@item.IdInmueble" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
+                </td>
+            }
             <td>
 				<a asp-action="Detalle" asp-route-id="@item.IdInmueble" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
-            <td>
-                <a asp-action="Eliminar" asp-route-id="@item.IdInmueble" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
-            </td>
+            @if(User.IsInRole("Administrador")){
+                <td>
+                    <a asp-action="Eliminar" asp-route-id="@item.IdInmueble" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
+                </td>
+            }
         </tr>
 }
     </tbody>
