--- a/Views/Inquilino/Listado.cshtml
+++ b/Views/Inquilino/Listado.cshtml
@@ -48,17 +48,22 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-			
-			<td>
-				<a asp-action="Editar" asp-route-id="@item.IdInquilino" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-				
-			</td>
+		    @if(User.IsInRole("Administrador"))
+            {
+                <td>
+                    <a asp-action="Editar" asp-route-id="@item.IdInquilino" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
+                    
+                </td>
+            }
             <td>
 				<a asp-action="Detalle" asp-route-id="@item.IdInquilino" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
-            <td>
-                <a asp-action="Eliminar" asp-route-id="@item.IdInquilino" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
-            </td>
+            @if(User.IsInRole("Administrador"))
+            {
+                <td>
+                    <a asp-action="Eliminar" asp-route-id="@item.IdInquilino" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
+                </td>
+            }
         </tr>
 }
     </tbody>
