--- a/Views/Pago/Listado.cshtml
+++ b/Views/Pago/Listado.cshtml
@@ -63,15 +63,19 @@
              <td>
                 @Html.DisplayFor(modelItem => item.Activo)
             </td>
-			<td>
-				<a asp-action="Editar" asp-route-id="@item.IdPago" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-			</td>
+            @if(User.IsInRole("Administrador")){
+                <td>
+                    <a asp-action="Editar" asp-route-id="@item.IdPago" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
+                </td>
+            }
             <td>
 				<a asp-action="Detalle" asp-route-id="@item.IdPago" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
-            <td>
-                <a asp-action="Eliminar" asp-route-id="@item.IdPago" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
-            </td>
+            @if(User.IsInRole("Administrador")){
+                <td>
+                    <a asp-action="Eliminar" asp-route-id="@item.IdPago" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
+                </td>
+            }
         </tr>
 }
     </tbody>
