--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,9 +50,12 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Listado">Usuarios</a>
                             </li>
                             }
+                
                             <li class="nav-item"></li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Perfil">Mi Perfil</a>
-                            
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Logout">Logout</a>
+                            </li>
                         </ul>
                     </div>
                     }
