--- a/Views/Tipo/Listado.cshtml
+++ b/Views/Tipo/Listado.cshtml
@@ -27,9 +27,11 @@
             <td>
 				<a asp-action="Detalle" asp-route-id="@item.IdTipo" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
 			</td>
-            <td>
-                <a asp-action="Eliminar" asp-route-id="@item.IdTipo" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
-            </td>
+            @if(User.IsInRole("Administrador")){
+                <td>
+                    <a asp-action="Eliminar" asp-route-id="@item.IdTipo" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
+                </td>
+            }
         </tr>
 }
     </tbody>
