--- a/Views/Usuario/Listado.cshtml
+++ b/Views/Usuario/Listado.cshtml
@@ -55,7 +55,9 @@
 			</td>
             @if(User.IsInRole("Administrador")){
                 <td>
-                    <a asp-action="Editar" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa-solid fa-square-pen"></i></a>&nbsp;
+                    <a asp-action="Editar" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa-solid fa-square-pen"></i></a>
+                </td>
+                <td>
                     <a asp-action="Eliminar" asp-route-id="@item.IdUsuario" title="Eliminar"><i class="fa-solid fa-trash-can"></i></a>
                 </td>
                 }
