--- a/Views/Inmueble/Detalle.cshtml
+++ b/Views/Inmueble/Detalle.cshtml
@@ -26,6 +26,12 @@
             @Html.DisplayFor(model => model.Ambientes)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Importe)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Importe)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Superficie)
         </dt>
         <dd class="col-sm-10">
