--- a/Views/Inmueble/Detalle.cshtml
+++ b/Views/Inmueble/Detalle.cshtml
@@ -56,6 +56,12 @@
             @Html.DisplayFor(model => model.Uso)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Disponible)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Disp)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PropietarioId)
         </dt>
         <dd class="col-sm-10">
