--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Editar Inmueble";
     var listaPropietarios = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Propietario>)ViewBag.Propietarios;
     var listaTipos = (IList<Tp_Inmobiliaria_Ledesma_Lillo.Models.Tipo>)ViewBag.Tipos;
+    var listaDisponibilidad = ViewBag.Disponibilidad;
+    var listaUso = ViewBag.Uso;
 }
 
 
@@ -47,10 +49,33 @@
                 <span asp-validation-for="Longitud" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Uso" class="control-label"></label>
-                <input asp-for="Uso" class="form-control" />
-                <span asp-validation-for="Uso" class="text-danger"></span>
-            </div>
+				<label class="control-label">Uso</label>
+				<select class="form-control" name="Uso">
+					@foreach (var item in listaUso)
+					{    @if(item == @Model.Uso){
+                            <option selected value="@item">@(item)</option>
+
+                        }else{
+						    <option value="@item">@(item)</option>
+                            }
+					}
+				</select>
+				<span asp-validation-for="Uso" class="text-danger"></span>
+			</div>
+            <div class="form-group">
+				<label class="control-label">Disponibilidad</label>
+				<select class="form-control" name="Disp">
+					@foreach (var item in listaDisponibilidad)
+					{    @if(item == @Model.Disp){
+                            <option selected value="@item">@(item)</option>
+
+                        }else{
+						    <option value="@item">@(item)</option>
+                            }
+					}
+				</select>
+				<span asp-validation-for="Disponible" class="text-danger"></span>
+			</div>
             <div class="form-group">
 				<label class="control-label">Tipo Inmueble</label>
 				<select class="form-control" name="TipoId">
