--- a/Views/Inmueble/InmueblesSuspendidos.cshtml
+++ b/Views/Inmueble/InmueblesSuspendidos.cshtml
@@ -1,20 +1,9 @@
 @model IEnumerable<Tp_Inmobiliaria_Ledesma_Lillo.Models.Inmueble>
 @{
     ViewData["Title"] = "Inmueble";
-}
-<div class="col-md-4">
-        <form asp-action="InmueblesSuspendidos">
-            <div class="form-group">
-                <input type="submit" value="Inmuebles Suspendidos" class="btn btn-primary" />
-            </div>
-        </form> 
-</div> 
-<br>   
+}   
 <div>
-	<h1>Inmuebles</h1>
-<p>
-     <a asp-action="Crear" title="Agregar Nuevo"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
-</p>
+	<h1>Inmuebles Suspendidos</h1>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -66,19 +55,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Disp)
             </td>
-                <td>
-                    <a asp-action="Editar" asp-route-id="@item.IdInmueble" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
-                </td>
             <td>
-				<a asp-action="Detalle" asp-route-id="@item.IdInmueble" title="Detalle" class="btn btn-success"><i class="fa-solid fa-circle-info"></i></a>
-			</td>
-            @if(User.IsInRole("Administrador")){
-                <td>
-                    <a asp-action="Eliminar" asp-route-id="@item.IdInmueble" title="Eliminar" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
-                </td>
-            }
+                <a asp-action="Editar" asp-route-id="@item.IdInmueble" title="Editar" class="btn btn-primary"><i class="fa-solid fa-square-pen"></i></a>
+            </td>
         </tr>
 }
     </tbody>
 </table>
+</div>
+<div>
+    <a asp-action="Listado">Volver al Listado</a>
 </div>
