--- a/Views/Propietario/Crear.cshtml
+++ b/Views/Propietario/Crear.cshtml
@@ -40,7 +40,7 @@
              <div class="form-group">
                 <label asp-for="Clave" class="control-label"></label>
                 <input asp-for="Clave" class="form-control" type="password" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <span asp-validation-for="Clave" class="text-danger"></span>
             </div>
             <br>
             <div class="form-group">
